cmake_minimum_required(VERSION 3.22)
project(atcorder)

set(CMAKE_CXX_STANDARD 14)

add_executable(abc247_Ex abc247/Ex/main.cpp)
add_executable(abc247_G abc247/G/main.cpp)
add_executable(abc247_A abc247/A/main.cpp)
add_executable(abc247_F abc247/F/main.cpp)
add_executable(abc247_C abc247/C/main.cpp)
add_executable(abc247_D abc247/D/main.cpp)
add_executable(abc247_E abc247/E/main.cpp)
add_executable(abc247_B abc247/B/main.cpp)
add_executable(abc244_Ex abc244/Ex/main.cpp)
add_executable(abc244_G abc244/G/main.cpp)
add_executable(abc244_A abc244/A/main.cpp)
add_executable(abc244_F abc244/F/main.cpp)
add_executable(abc244_D abc244/D/main.cpp)
add_executable(abc244_E abc244/E/main.cpp)
add_executable(abc244_B abc244/B/main.cpp)
add_executable(abc244_Ex abc244/Ex/main.cpp)
add_executable(abc244_G abc244/G/main.cpp)
add_executable(abc244_A abc244/A/main.cpp)
add_executable(abc244_F abc244/F/main.cpp)
add_executable(abc244_D abc244/D/main.cpp)
add_executable(abc244_E abc244/E/main.cpp)
add_executable(abc244_B abc244/B/main.cpp)
add_executable(abc243_Ex abc243/Ex/main.cpp)
add_executable(abc243_G abc243/G/main.cpp)
add_executable(abc243_A abc243/A/main.cpp)
add_executable(abc243_F abc243/F/main.cpp)
add_executable(abc243_C abc243/C/main.cpp)
add_executable(abc243_D abc243/D/main.cpp)
add_executable(abc243_E abc243/E/main.cpp)
add_executable(abc243_B abc243/B/main.cpp)
