cmake_minimum_required(VERSION 3.22)
project(atcorder)

set(CMAKE_CXX_STANDARD 14)

add_executable(abc247_Ex abc247/Ex/main.cpp)
add_executable(abc247_G abc247/G/main.cpp)
add_executable(abc247_A abc247/A/main.cpp)
add_executable(abc247_F abc247/F/main.cpp)
add_executable(abc247_C abc247/C/main.cpp)
add_executable(abc247_D abc247/D/main.cpp)
add_executable(abc247_E abc247/E/main.cpp)
add_executable(abc247_B abc247/B/main.cpp)
add_executable(abc244_Ex abc244/Ex/main.cpp)
add_executable(abc244_G abc244/G/main.cpp)
add_executable(abc244_A abc244/A/main.cpp)
add_executable(abc244_F abc244/F/main.cpp)
add_executable(abc244_D abc244/D/main.cpp)
add_executable(abc244_E abc244/E/main.cpp)
add_executable(abc244_B abc244/B/main.cpp)
add_executable(abc244_C abc244/C/main.cpp)
add_executable(abc243_A abc243/A/main.cpp)
add_executable(abc243_F abc243/F/main.cpp)
add_executable(abc243_C abc243/C/main.cpp)
add_executable(abc243_D abc243/D/main.cpp)
add_executable(abc243_E abc243/E/main.cpp)
add_executable(abc243_B abc243/B/main.cpp)
add_executable(abc242_Ex abc242/Ex/main.cpp)
add_executable(abc242_G abc242/G/main.cpp)
add_executable(abc242_A abc242/A/main.cpp)
add_executable(abc242_F abc242/F/main.cpp)
add_executable(abc242_C abc242/C/main.cpp)
add_executable(abc242_D abc242/D/main.cpp)
add_executable(abc242_E abc242/E/main.cpp)
add_executable(abc242_B abc242/B/main.cpp)
add_executable(abc241_Ex abc241/Ex/main.cpp)
add_executable(abc241_G abc241/G/main.cpp)
add_executable(abc241_A abc241/A/main.cpp)
add_executable(abc241_F abc241/F/main.cpp)
add_executable(abc241_C abc241/C/main.cpp)
add_executable(abc241_D abc241/D/main.cpp)
add_executable(abc241_E abc241/E/main.cpp)
add_executable(abc241_B abc241/B/main.cpp)
add_executable(abc253_Ex abc253/Ex/main.cpp)
add_executable(abc253_G abc253/G/main.cpp)
add_executable(abc253_A abc253/A/main.cpp)
add_executable(abc253_F abc253/F/main.cpp)
add_executable(abc253_C abc253/C/main.cpp)
add_executable(abc253_D abc253/D/main.cpp)
add_executable(abc253_E abc253/E/main.cpp)
add_executable(abc253_B abc253/B/main.cpp)
add_executable(abc254_Ex abc254/Ex/main.cpp)
add_executable(abc254_G abc254/G/main.cpp)
add_executable(abc254_A abc254/A/main.cpp)
add_executable(abc254_F abc254/F/main.cpp)
add_executable(abc254_C abc254/C/main.cpp)
add_executable(abc254_D abc254/D/main.cpp)
add_executable(abc254_E abc254/E/main.cpp)
add_executable(abc254_B abc254/B/main.cpp)
add_executable(abc239_Ex abc239/Ex/main.cpp)
add_executable(abc239_G abc239/G/main.cpp)
add_executable(abc239_A abc239/A/main.cpp)
add_executable(abc239_F abc239/F/main.cpp)
add_executable(abc239_C abc239/C/main.cpp)
add_executable(abc239_D abc239/D/main.cpp)
add_executable(abc239_E abc239/E/main.cpp)
add_executable(abc239_B abc239/B/main.cpp)
add_executable(abc238_Ex abc238/Ex/main.cpp)
add_executable(abc238_G abc238/G/main.cpp)
add_executable(abc238_A abc238/A/main.cpp)
add_executable(abc238_F abc238/F/main.cpp)
add_executable(abc238_C abc238/C/main.cpp)
add_executable(abc238_D abc238/D/main.cpp)
add_executable(abc238_E abc238/E/main.cpp)
add_executable(abc238_B abc238/B/main.cpp)
